# heterocore-compiler

./: ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BRANDING.md  INTEGRATION.md
examples/: tiny_char_transformer.onnx  tiny_transformer.json
results/: energy_sensitivity.json  qwen_decode.plan.json  tiny_transformer.plan.json
schemas/: execution-plan-v1.schema.json
scripts/: plot_energy.py
src/heterocore_compiler/: __init__.py  cli.py  compiler.py  config.py  cost_model.py  decode.py  model.py  onnx_import.py
tests/: test_compiler.py  test_onnx_import.py
tools/: run_energy_sensitivity.py
