[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "heterocore-compiler"
version = "0.2.0"
description = "Compiler and cost model for mixed analog-digital AI inference"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "WaffleBits"}]
dependencies = []

[project.optional-dependencies]
onnx = ["onnx>=1.17"]

[project.scripts]
heterocore-compile = "heterocore_compiler.cli:main"
heterocore-compile-decode = "heterocore_compiler.decode:main"

[tool.setuptools.packages.find]
where = ["src"]
